--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <center>
 <a href="tracing-testosterone-populationviz.html">Network </a>
+<a href="tracing-testosterone-outcomeviz.html"> Outcome Visualization </a>
 </body>
 </html>
