--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 <body>
 <center>
-<a href="tracing-testosterone-populationviz.html">Network </a> || <a href="tracing-testosterone-outcomesviz.html">Outcome Visualization </a>
+<a href="tracing-testosterone-outcomesviz.html">Outcome Visualization </a>
 </center>
 </body>
 </html>
