--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	</head>
 <body>
 <center>
-<a href="tracing-testosterone-populationviz.html">Network </a> 
-<a href="tracing-testosterone-outcomesviz.html">Outcome Visualization </a>
+<a href="racialization-in-testosterone-research-bygroups.html">Groups Network </a> 
+<a href="racialization-in-testosterone-research-byoutcomes.html">Outcome Visualization </a>
 </center>
 </body>
 </html>
